# app

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/master/: CMakeLists.txt  machine.h  machine_pool.cpp  machine_pool.h  master.cpp  request.cpp  request.h  service.cpp  service.h  task.h  work_thread.cpp
src/proxy/: clean_proxy.sh
src/proxy/master/: master.thrift
src/proxy/master/gen-cpp/: Master.h
src/proxy/worker/: worker.thrift
src/proxy/worker/gen-cpp/: Master.cpp  Master_server.skeleton.cpp  Worker.cpp  Worker.h  Worker_server.skeleton.cpp  master_types.cpp  master_types.h
src/unused/client/: CMakeLists.txt  client.cpp  work_thread.cpp
src/worker/: .worker.cpp.swp  CMakeLists.txt  executor.cpp  executor.h  resource_manager.cpp  resource_manager.h  service.cpp  service.h  work_thread.cpp  worker.cpp
